# testintermedio

./: .gitignore  CMakeLists.txt  book.cpp  book.h  date.cpp  date.h  main.cpp
src/: book.cpp  date.cpp  main.cpp
toinclude/: book.h  date.h
